[gd_scene load_steps=2 format=3 uid="uid://rewardscreen"]

[ext_resource type="Script" path="res://scripts/screens/reward_screen.gd" id="1_reward"]

[node name="RewardScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_reward")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.12, 0.15, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.3, 0.9, 0.3, 1)
theme_override_font_sizes/font_size = 36
text = "Victory!"
horizontal_alignment = 1

[node name="FoodLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8, 0.3, 1)
theme_override_font_sizes/font_size = 18
text = "Food Tokens Earned: +25 (Total: 75)"
horizontal_alignment = 1

[node name="CardLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Choose a card to add to your deck:"
horizontal_alignment = 1

[node name="CardContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1
theme_override_constants/separation = 20

[node name="TraitSection" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TraitLabel" type="Label" parent="VBoxContainer/TraitSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.4, 0.8, 1)
theme_override_font_sizes/font_size = 18
text = "Choose a trait:"
horizontal_alignment = 1

[node name="TraitContainer" type="HBoxContainer" parent="VBoxContainer/TraitSection"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1
theme_override_constants/separation = 20

[node name="SkipButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
size_flags_horizontal = 4
text = "Skip"
